ereg/tests/spliti_variation_002.out
*** Testing spliti() : usage variations ***
Error: 8 - Undefined variable: undefined_var, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(64)
Error: 8 - Undefined variable: unset_var, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(67)

Arg value 0 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(1) "0"
}

Arg value 1 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(1) "1"
}

Arg value 12345 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(5) "12345"
}

Arg value -2345 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(5) "-2345"
}

Arg value 10.5 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(4) "10.5"
}

Arg value -10.5 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(5) "-10.5"
}

Arg value 101234567000 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(12) "101234567000"
}

Arg value 1.07654321E-9 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(2) {
  [0]=>
  string(10) "1.07654321"
  [1]=>
  string(2) "-9"
}

Arg value 0.5 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(3) "0.5"
}
Error: 8 - Array to string conversion, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(73)

Arg value Array 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
Error: 2 - preg_split() expects parameter 2 to be string, array given, /Users/tjerk/Documents/php-bc/ereg/ereg.php(198)
bool(false)
Error: 8 - Array to string conversion, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(73)

Arg value Array 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
Error: 2 - preg_split() expects parameter 2 to be string, array given, /Users/tjerk/Documents/php-bc/ereg/ereg.php(198)
bool(false)
Error: 8 - Array to string conversion, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(73)

Arg value Array 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
Error: 2 - preg_split() expects parameter 2 to be string, array given, /Users/tjerk/Documents/php-bc/ereg/ereg.php(198)
bool(false)
Error: 8 - Array to string conversion, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(73)

Arg value Array 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
Error: 2 - preg_split() expects parameter 2 to be string, array given, /Users/tjerk/Documents/php-bc/ereg/ereg.php(198)
bool(false)
Error: 8 - Array to string conversion, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(73)

Arg value Array 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
Error: 2 - preg_split() expects parameter 2 to be string, array given, /Users/tjerk/Documents/php-bc/ereg/ereg.php(198)
bool(false)

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}

Arg value 1 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(1) "1"
}

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}

Arg value 1 
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(1) "1"
}

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}
Error: 4096 - Object of class stdClass could not be converted to string, /Users/tjerk/Documents/php-bc/ereg/tests/spliti_variation_002.php(73)

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
Error: 2 - preg_split() expects parameter 2 to be string, object given, /Users/tjerk/Documents/php-bc/ereg/ereg.php(198)
bool(false)

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}

Arg value  
Error: 16384 - Function spliti() is deprecated, /Users/tjerk/Documents/php-bc/ereg/ereg.php(192)
array(1) {
  [0]=>
  string(0) ""
}
Done